<resources>
    <string name="app_name">Purring Kittens</string>
    <string name="nav_header_title">Purring Kittens</string>
    <string name="nav_header_subtitle">kittens.mrau@gmail.com</string>
    <string name="nav_header_desc">NAVIGATION HEADER</string>
    <string name="nav_take_photo">Snap a Cat</string>
    <string name="nav_gallery">Open Gallery</string>
    <string name="nav_pickcat">Mrrr</string>
    <string name="nav_options">Options</string>
    <string name="action_settings">Settings</string>
    <string name="app_opt_vibration">Set Vibration</string>
    <string name="camera_permission_denied">"Can't use camera"</string>
    <string name="nav_donate">Donate Cat</string>
    <string name="vibrationSwitch">Vibrations</string>
    <string name="start_menu_options">Options</string>
    <string name="start_menu_donate">Donate</string>
    <string name="start_menu_start">Start</string>
    <!-- Admob  -->
    <string name="NEW_APP_ID" translatable="false">ca-app-pub-2830743924992170~2787397058</string>
    <string name="main_banner_id" translatable="false">ca-app-pub-2830743924992170/9899600310</string>
    <string name="options_banner_id" translatable="false">ca-app-pub-2830743924992170/7032644267</string>
    <string name="full_video_ad" translatable="false">ca-app-pub-2830743924992170/9078015800</string>
    <string name="full_ad" translatable="false">ca-app-pub-2830743924992170/8563752744</string>
</resources>