<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navHeaderMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="@drawable/picture_2"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingTop="24dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/navHeaderLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/nav_header_title"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/optionsAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/options_banner_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
